# Capstone-Project-CUDA

./: CMakeLists.txt  COMPLETE_DELIVERY.md  EXECUTION_PROOF.md  LICENSE  Makefile  Makefile.win  PROJECT_SUMMARY.md  README.md  build.ps1  build_simple.ps1  demo.ps1  presentation.ps1
data/results/: README.md  benchmark_summary_20250717.csv  performance_summary.txt
data/sample_images/: README.md
include/: benchmark.h  cuda_kernels.cuh  image_processor.h
scripts/: download_test_data.ps1  run_benchmarks.ps1
src/: benchmark.cpp  cuda_kernels.cu  demo_standalone.cpp  image_processor.cpp  main.cpp
